previous files modified and add new features